# Physical-AI-Humanoid-Robotics-Textbook

./: .gitignore
.specify/memory/: constitution.md
backend/: .gitignore  README.md  ingest_data.py  list_models.py  main.py  requirements.txt  test_backend.py
backend/agent/: __init__.py  agent_orchestrator.py  debug_env_path.py  main.py  models.py  rag_pipeline.py  tools.py
backend/config/: logging_config.py
backend/embeddings/: generator.py
backend/ingestion/: chunking.py  discovery.py  extraction.py
backend/retrieval/: models.py  retriever.py
backend/scripts/: run_pipeline.py  test_agent_api.py  test_retrieval.py  validate_data.py
backend/vector_store/: qdrant_manager.py
history/adr/: 1-module-and-chapter-content-structure.md  10-nvidia-isaac-platform-for-ai-robotics-module-3.md  11-vslam-and-nav2-stack-for-humanoid-navigation-module-3.md  2-technology-stack-for-content-and-examples.md  3-code-example-and-diagram-strategy.md  4-project-structure-and-organization.md  5-docusaurus-internal-routing-strategy.md  6-docusaurus-search-solution.md  7-docusaurus-v3-compatibility-and-ui-preservation.md  8-digital-twin-simulation-platform-strategy-gazebo-unity.md  9-ros2-simulation-integration-strategy-for-digital-twin-module.md
module1-ros2-humanoid-control/: README.md
module1-ros2-humanoid-control/content/: chapter1.md  chapter3.md  chapter5.md
module1-ros2-humanoid-control/rviz/: urdf_config.rviz
module1-ros2-humanoid-control/src/: CMakeLists.txt  package.xml
module1-ros2-humanoid-control/src/python_agents/: mock_joint_controller.py  simple_agent.py
module1-ros2-humanoid-control/src/python_agents/launch/: agent_control_launch.py
module1-ros2-humanoid-control/src/ros2_basics/: arm_action_client.py  arm_action_server.py  conceptual_example.py  gripper_service_client.py  gripper_service_server.py  simple_publisher.py  simple_subscriber.py
module1-ros2-humanoid-control/src/ros2_basics/action/: MoveArm.action
module1-ros2-humanoid-control/src/ros2_basics/launch/: arm_action_launch.py  gripper_service_launch.py  simple_comm_launch.py
module1-ros2-humanoid-control/src/ros2_basics/srv/: SetGripperState.srv
module1-ros2-humanoid-control/src/urdf_models/: joint_state_publisher.py  simple_humanoid_arm.urdf
module1-ros2-humanoid-control/src/urdf_models/launch/: display_arm_launch.py
module2-digital-twin/: README.md
module2-digital-twin/content/: _category_.json  chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md
module2-digital-twin/docs/: environment_setup.md
module2-digital-twin/ros2_packages/: package.xml  setup.cfg  setup.py
module2-digital-twin/ros2_packages/config/: simple_humanoid_controller.yaml
module2-digital-twin/ros2_packages/launch/: humanoid_gazebo.launch.py  humanoid_room_simulation.launch.py  humanoid_sensors_gz.launch.py  humanoid_simulation.launch.py
module2-digital-twin/ros2_packages/src/: lidar_processor.py  simple_navigator.py
module2-digital-twin/ros2_packages/src/gazebo_humanoid_control/: simple_joint_controller.py
module2-digital-twin/ros2_packages/src/humanoid_description/: CMakeLists.txt  package.xml
module2-digital-twin/ros2_packages/src/humanoid_description/launch/: display_arm_launch.py
module2-digital-twin/ros2_packages/src/humanoid_description/scripts/: mock_joint_controller.py
module2-digital-twin/ros2_packages/src/humanoid_description/urdf/: simple_humanoid_arm.urdf
module2-digital-twin/ros2_packages/src/humanoid_description/worlds/: simple_arm.world
module2-digital-twin/ros2_packages/src/interaction/: object_manipulator.py
module2-digital-twin/ros2_packages/src/navigation/: simple_navigator.py
module2-digital-twin/ros2_packages/src/perception/: lidar_obstacle_detector.py  sensor_data_processor.py
module2-digital-twin/unity_projects/: import_example.txt  mini_lab_interaction_scene.txt  rendering_interaction_example.txt
module3-ai-robot-brain/rviz/: vslam_config.rviz
module3-isaac-ai-robot-brain/: README.md
module3-isaac-ai-robot-brain/docs/: environment_setup.md
module3-isaac-ai-robot-brain/ros2_packages/: README.md  package.xml
module3-isaac-ai-robot-brain/ros2_packages/isaac_ros_vslam_configs/: CMakeLists.txt  package.xml
module3-isaac-ai-robot-brain/ros2_packages/isaac_ros_vslam_configs/launch/: vslam_launch.py
module3-isaac-ai-robot-brain/ros2_packages/launch/: autonomous_navigation_pipeline.launch.py
module3-isaac-ai-robot-brain/ros2_packages/nav2_humanoid_configs/launch/: humanoid_nav2_launch.py
module3-isaac-ai-robot-brain/ros2_packages/nav2_humanoid_configs/params/: humanoid_nav2_params.yaml
module3-isaac-ai-robot-brain/ros2_packages/src/micro_project/: autonomous_mission.py
module3-isaac-ai-robot-brain/ros2_packages/src/navigation_nodes/: goal_sender_node.py
module3-isaac-ai-robot-brain/ros2_packages/src/sensor_data_capture/: lidar_capture_node.py  rgbd_capture_node.py
module3-isaac-ai-robot-brain/ros2_packages/src/vslam_nodes/: vslam_visualizer_node.py
module4-vla-robotics/: README.md
module4-vla-robotics/content/: chapter1.md  chapter2.md  chapter3.md
module4-vla-robotics/ros2_packages/src/custom_interfaces/: CMakeLists.txt  package.xml
module4-vla-robotics/ros2_packages/src/custom_interfaces/action/: ManipulateObject.action
module4-vla-robotics/ros2_packages/src/custom_interfaces/msg/: Action.msg  SimulatedObject.msg  TaskPlan.msg
module4-vla-robotics/ros2_packages/src/custom_interfaces/srv/: GenerateTaskPlan.srv
module4-vla-robotics/ros2_packages/src/vla_robotics_package/: CMakeLists.txt  cognitive_planner_node.py  manipulation_controller_node.py  package.xml  perception_node.py  task_executor_node.py  voice_capture_node.py  voice_transcription_node.py
module4-vla-robotics/ros2_packages/vla_robotics_package/: package.xml  setup.cfg  setup.py
module4-vla-robotics/ros2_packages/vla_robotics_package/msg/: ObjectDetections.msg  SimulatedObject.msg
module4-vla-robotics/ros2_packages/vla_robotics_package/srv/: GenerateTaskPlan.srv
website/: .gitignore  docusaurus.config.ts  package-lock.json  sidebars.ts
(+257 files in other folders)
